migdb.qvto/transforms/tests/validator_postgresql/test_app_01.qvto
import builder_rdb;
modeltype APP uses "http://www.collectionspro.eu/jam/mm/app";
transformation secondAPP(out inoutModel : APP);


main() {
	log("TEST_APP_01: valid");	
	
	 
}