migdb.qvto/transforms/tests/errors/empty_errors.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation empty_errors(out inoutModel : ERR);

main(){
	_errorLog(OrderedSet{});
}